deploy/kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-resources

spec:
  validationFailureAction: Audit

  rules:
  - name: resource-limits

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "CPU and memory limits are required."

      pattern:
        spec:
          containers:
          - resources:
              requests:
                cpu: "?*"
                memory: "?*"
              limits:
                cpu: "?*"
                memory: "?*"
